# lidar_camera_calibration

./: CMakeLists.txt  vcpkg.json
apps/: CMakeLists.txt  main.cpp
include/: calibrator.hpp  eigen_cloud.hpp  eigen_cloud_view.hpp  plane_candidate.hpp  plane_model.hpp  utils.hpp
src/: CMakeLists.txt  calibrator.cpp  eigen_cloud.cpp  eigen_cloud_view.cpp  plane_candidate.cpp  plane_model.cpp  utils.cpp
tests/: CMakeLists.txt
